--- a/style.css
+++ b/style.css
@@ -80,3 +80,9 @@ label{
     color:#004643;
     background-color: #bae8e8;
 }
+footer{
+    background-color: #004643;
+    color: #bae8e8;
+    width: 100%;
+    height: 35px;
+}
